[project]
name = "shakespeare-text-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "numpy<2.0",
    "pandas>=2.3.3",
    "tensorflow-macos>=2.14.0",
    "tensorflow-metal>=1.2.0",
]

